# TestRange

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  PLAN.md  README.md  RESEARCH.md  TODO.md  pyproject.toml  requirements.txt
.tours/: code-review.tour  fixlist.tour
cache/: .gitignore  docker-compose.yml  nginx.conf
cache-server/: README.md  docker-compose.yml
cache/docker-init/: 10-gen-certs.sh
docs/: Architecture-and-Design.md  Makefile  changelog.rst  conf.py  index.md  index.rst
docs/adr/: 0001-subprocess-ban.md  0002-no-asyncio.md  0003-state-schema-v1.md  0004-cacheentry-only.md  0005-osdrive-distinct.md  0006-driver-stable-mac.md  0007-deterministic-config-hash.md  0008-driver-abc-multi-backend.md  0009-mgmt-switch-semantics.md  0010-build-run-split.md  0011-content-addressed-backend-image-cache.md  0012-serial-build-result.md  0013-switch-sidecar-split.md  0014-managed-build-switch.md  0015-backend-binding.md  0016-named-uplinks-out-of-band-egress.md  0017-dedicated-build-nic.md  0018-single-instance-only.md  0019-libvirt-reference-backend.md  0020-guest-gateway-abstraction.md  0020-in-process-io-parallelism.md  0021-nested-virtualization.md  0022-xorriso-installer-iso-prep.md  0023-in-process-io-parallelism.md  0024-qemu-img-disk-conversion.md  0025-esxi-standalone-driver.md  0026-libvirt-concrete-device-types.md  0027-bare-metal-provisioning.md  0028-release-validation-strategy.md  0029-rich-terminal-output.md  0030-build-graph-dag.md  index.md
docs/api/: backends.rst  builders.rst  cache.rst  cloud_init.rst  communication.rst  core.rst  devices.rst  exceptions.rst  index.rst  network.rst  packages.rst  storage.rst  vm.rst
docs/dev/: architecture.md  bugfixing.md  contributing.md  e2e-findings-esxi.md  e2e-findings-proxmox.md  graph.md
docs/usage/: architecture.rst  caching.rst  communication.rst  debugging.rst  examples.rst  extending-checklists.rst  extending.rst  http_cache.rst  index.rst  installation.rst  networks.rst  packages.rst  proxy.rst  quickstart.rst  vms.rst  windows.rst
docs/user/: build-vs-run.md  connecting-to-a-backend.md  install.md  running-tests.md  thinking-in-build-graphs.md  writing-a-plan.md
examples/: bring_your_own_image.py  capabilities-nested-esxi.py  capabilities-nested.py  capabilities-px.py  capabilities.py  concurrency.py  connect.toml.example  cross_network_dns.py  data_disk.py  exec_features.py  file_io.py  hello_world.py  host_isolated_network.py  imperative_exec.py  isolated_network.py  local_image.py  multi_disk.py  multi_distro.py  multi_tier_app.py  native_agent.py  nested_hypervisor.py  nested_lab.py  nested_proxmox_airgapped.py  nested_proxmox_public_private.py  nested_public_private.py  network_modes.py  package_mix.py  private_public.py  proxmox_explicit_zones.py  pve_node.py  px_hello.py  qga.py  remote_libvirt.py  service_config.py  ssh_communicator.py  static_ip_lab.py  two_networks_three_vms.py  winrm_communicator.py
testrange/: __init__.py  __main__.py  _ansi.py  _cli.py  _concurrency.py  _console.py  _dashboard.py  _debug.py  _disk_format.py  _log.py  _logging.py  _names.py  _progress.py  _repl.py  _run.py  _tui.py  _version.py  cache.py  cache_http.py  cli.py  connect.py  credentials.py  devices.py  exceptions.py  guest_io.py  handles.py  hypervisor.py  nodes.py  orchestrator_base.py  packages.py  plan.py  preflight.py  test.py
testrange/backends/: __init__.py
testrange/builders/: __init__.py  _esxi_prepare.py  _proxmox_prepare.py  base.py  cloudinit.py  esxi.py  proxmox.py  sidecar_iso.py
testrange/cache/: __init__.py  _names.py  entry.py  http.py  local.py  manager.py
testrange/communication/: __init__.py  base.py  ssh.py  winrm.py
testrange/communicators/: __init__.py  base.py  native.py  qga.py  ssh.py
testrange/credentials/: __init__.py  base.py  posix.py  ssh.py
testrange/devices/: __init__.py  base.py  hard_drive.py  memory.py  sizes.py  vcpu.py  virtual_network_ref.py  vnic.py
testrange/drivers/: __init__.py  _diskconvert.py  _registry.py  base.py  libvirt.py  mock.py
testrange/gateways/: __init__.py  base.py  ssh_jump.py
testrange/graph/: __init__.py  build_graph.py  edge.py  keys.py  node.py
testrange/networks/: __init__.py  _addressing_consts.py  base.py  generic.py  libvirt.py  sidecar.py  validate.py
testrange/orchestrator/: __init__.py  _parallel.py  artifacts.py  backend.py  build.py  build_phase.py  context.py  dashboard_state.py  executor.py  install.py  install_phase.py  nested_phase.py  provision.py  run_phase.py  runner.py  runtime.py  teardown.py  vm_build.py  vm_run.py
testrange/proxy/: __init__.py  base.py  ssh.py
testrange/state/: __init__.py  cleanup.py  schema.py  store.py
testrange/storage/: __init__.py  base.py  local.py  ssh.py
testrange/utils/: __init__.py  fsutil.py  sshkey.py
testrange/vms/: __init__.py  base.py  generic.py  handle.py  hypervisor.py  hypervisor_base.py  images.py  nested.py  recipe.py  spec.py  validate.py
tests/: conftest.py  esxi_fakes.py  mock_driver.py  test_backend_contract.py  test_builders.py  test_cache.py  test_cache_http.py  test_cleanup.py  test_cli.py  test_cloud_init.py  test_communication.py  test_communication_ssh.py  test_communication_winrm.py  test_credentials.py  test_debug.py  test_devices.py  test_disk_format.py  test_exceptions.py  test_generic_vm.py  test_hypervisor_factory.py  test_hypervisor_generic.py  test_images.py  test_libvirt_proxy.py  test_nested.py  test_nested_matrix.py  test_networks.py  test_orchestrator.py  test_orchestrator_proxy_abc.py  test_packages.py  test_proxmox_answer.py  test_proxmox_guest_agent.py  test_proxmox_install_vnet.py  test_proxmox_live.py  test_proxmox_networking_parity.py  test_proxmox_prepare.py  test_proxmox_proxy.py  test_proxmox_root_on_vm.py  test_proxmox_scaffold.py  test_proxmox_switches.py  test_proxmox_template_admin.py  (+14 more)
tests/integration/: test_esxi_prepare.py  test_libvirt.py  test_libvirt_driver.py  test_libvirt_qga.py  test_nested.py  test_proxmox.py  test_proxmox_prepare.py
tests/plans/: README.md
(+220 files in other folders)
