[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "testrange"
version = "0.2.0"
description = "Declarative Python plans → VM test-ranges → user test functions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = []
dependencies = [
    "cryptography>=42",
]

[project.optional-dependencies]
ssh = ["paramiko>=3"]
cloudinit = ["pycdlib>=1.14", "pyyaml>=6"]
http = ["requests>=2.31"]
# proxmoxer's `https` backend rides on requests; the driver opens its own
# paramiko SFTP channel for download_from_pool (PVE has no REST byte-download).
# requests-toolbelt lets proxmoxer *stream* multipart uploads — without it the
# backend buffers in memory and caps uploads at 2 GiB, too small for a captured
# OS disk (run-phase upload_to_pool / create_vm import source).
# websocket-client reads the build-result serial console: PVE serves serial0
# only over termproxy->vncwebsocket (a websocket proxmoxer can't speak), the
# second sanctioned transport exception (PVE-17, ADR-0012).
proxmox = [
    "proxmoxer>=2",
    "requests>=2.31",
    "requests-toolbelt>=1",
    "paramiko>=3",
    "websocket-client>=1.7",
    # ProxmoxAnswerBuilder authors the answer-file seed ISO with pycdlib (the
    # installer-ISO prep itself uses the system `xorriso`, ADR-0022, not a wheel).
    "pycdlib>=1.14",
]
# libvirt-python is the only libvirt dependency; it imports lazily (on connect),
# so the package registers without it installed.
libvirt = [
    "libvirt-python>=10",
]
# pyvmomi is the ESXi control plane (SmartConnect + managed objects); it imports
# lazily (on connect), so the package registers without it installed. requests
# carries the datastore /folder byte I/O (pool upload/download); qemu-img (a host
# binary, ADR-0024) converts qcow2<->vmdk at the boundary and is not a wheel.
esxi = [
    "pyvmomi>=8",
    "requests>=2.31",
]
docs = [
    "sphinx>=8",
    "furo>=2024.8",
    "myst-parser>=4",
    "sphinx-copybutton>=0.5",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.15",
    "mypy>=1.10",
    "types-paramiko",
    "types-pyyaml",
    "types-requests",
    "pycdlib>=1.14",
    "pyyaml>=6",
    "paramiko>=3",
    "requests>=2.31",
    "proxmoxer>=2",
]
all = [
    "testrange[ssh,cloudinit,http,proxmox,libvirt,esxi]",
]

[project.scripts]
testrange = "testrange.cli:main"

[tool.setuptools.packages.find]
include = ["testrange*"]

[tool.ruff]
target-version = "py311"
line-length = 100
# notes/ holds research scratch and reproducible spike scripts (e.g. live-host
# recon), not shipped code — kept as artifacts but out of the strict gate.
extend-exclude = ["notes"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "TID",    # flake8-tidy-imports (banned-api)
    "S",      # flake8-bandit (security) — replaces a standalone bandit pass
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib (reinforces the subprocess/os ban)
    "T20",    # flake8-print (no stray prints in library code)
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line length (let formatter handle)
    "S101",   # assert: the codebase's deliberate invariant / mypy type-narrowing idiom
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"subprocess".msg = "subprocess is banned project-wide (PLAN.md decision 15). Use a Python library instead. If you have a justified need, add an ADR and the sanctioned module."

[tool.ruff.lint.per-file-ignores]
# Tests carry dummy credentials and temp-file paths as fixtures, and use bare
# asserts/with-statements freely — these bandit rules are noise in test code.
"tests/**" = ["B011", "S105", "S106", "S108"]
# Examples show dummy demo credentials as API shape and use well-known guest
# paths (e.g. /dev/shm) as plain strings; an inline noqa would violate the "no
# comments in examples" rule, so ignore S106 (hardcoded password) + S108
# (temp-dir path) here instead.
"examples/**" = ["S106", "S108"]
# The CLI's job is to print to stdout; T201 guards library code, not the CLI.
"testrange/cli.py" = ["T201"]
# ADR-0022: the sanctioned subprocess modules (installer-ISO prep via xorriso, to
# preserve hybrid-boot layouts a pure-pycdlib rebuild strips). ADR-0024: qemu-img
# disk-format conversion at a non-qcow2 driver boundary (CORE-2). Scoped here so
# the project-wide ban still holds everywhere else.
"testrange/builders/_proxmox_prepare.py" = ["TID251", "S404", "S603"]
"testrange/builders/_esxi_prepare.py" = ["TID251", "S404", "S603"]
"testrange/drivers/_diskconvert.py" = ["TID251", "S404", "S603"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pycdlib",
    "pycdlib.*",
    "proxmoxer",
    "proxmoxer.*",
    "websocket",
    "websocket.*",
    "libvirt",
    "libvirt_qemu",
    "pyVim",
    "pyVim.*",
    "pyVmomi",
    "pyVmomi.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "proxmox: integration tests against a live Proxmox VE host (needs TESTRANGE_PVE_HOST)",
    "libvirt: integration tests against a live local libvirt (qemu:///system; needs only 'libvirt' group, no root)",
]

[tool.commitizen]
name = "cz_conventional_commits"
# Read/write the canonical version from [project].version (PEP 621), so
# `cz bump` keeps the package version, the git tag, and CHANGELOG.md in lockstep.
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true  # stay in 0.x — breaking changes bump minor, not major
